--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
   </header>
 
   <section>
-    <h3>Benvenuta</h3>
-    <p>Extension ciglia professionali, cura dei dettagli e bellezza su misura.</p>
-    <a class="btn" href="https://www.instagram.com/" target="_blank">Seguimi su Instagram</a>
-  </section>
+  <h3>Benvenuta</h3>
+  <p>Extension ciglia professionali per valorizzare il tuo sguardo con eleganza e precisione.</p>
+  <a class="btn" href="https://www.instagram.com/aletlashes" target="_blank">
+    Prenota su Instagram
+  </a>
+</section>
 
   <section>
     <h3>Contatti</h3>
