--- a/index.html
+++ b/index.html
@@ -6,68 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      margin: 0;
+      padding: 40px 20px;
+      background-color: #ffffff;
       color: #333;
       text-align: center;
     }
-    header {
-      background-color: #f7d6e0;
-      padding: 40px 20px;
-    }
     h1 {
-      margin: 0;
       font-size: 32px;
+      margin-bottom: 10px;
     }
-    h2 {
-      font-weight: normal;
-      margin-top: 10px;
+    p {
+      font-size: 18px;
+      max-width: 600px;
+      margin: 10px auto;
     }
-    section {
-      padding: 40px 20px;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background-color: #000;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 25px;
-    }
-    footer {
-      background-color: #f1f1f1;
-      padding: 20px;
-      font-size: 14px;
+    .contatti {
+      margin-top: 30px;
+      font-size: 16px;
     }
   </style>
 </head>
-
 <body>
 
-  <header>
-    <h1>A.T LASHES</h1>
-    <h2>Lashmaker</h2>
-  </header>
+  <h1>A.T LASHES</h1>
+  <p>Lashmaker professionista</p>
+  <p>Dove nasce lo sguardo che fa la differenza</p>
 
-  <section>
-  <h3>Benvenuta</h3>
-  <p>Extension ciglia professionali per valorizzare il tuo sguardo con eleganza e precisione.</p>
-  <a class="btn" href="https://www.instagram.com/aletlashes" target="_blank">
-    Prenota su Instagram
-  </a>
-</section>
-
-  <section>
-    <h3>Contatti</h3>
+  <div class="contatti">
     <p>📍 Italia</p>
-    <p>📩 Scrivimi su Instagram per info e appuntamenti</p>
-  </section>
-
-  <footer>
-    © 2026 A.T LASHES – Tutti i diritti riservati
-  </footer>
+    <p>📩 Instagram: @at.lashes</p>
+  </div>
 
 </body>
 </html>
