--- a/index.html
+++ b/index.html
@@ -2,42 +2,217 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>A.T LASHES – Lashmaker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A.T Lashes</title>
+
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 40px 20px;
-      background-color: #ffffff;
-      color: #333;
-      text-align: center;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      background-color: #f8f6f3;
+      color: #2f2f2f;
+      line-height: 1.7;
     }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 80px 20px;
+    }
+
+    h1, h2, h3 {
+      text-align: center;
+      font-weight: 300;
+      letter-spacing: 1px;
+    }
+
     h1 {
-      font-size: 32px;
+      font-size: 2.6em;
       margin-bottom: 10px;
     }
-    p {
-      font-size: 18px;
-      max-width: 600px;
-      margin: 10px auto;
+
+    h2 {
+      font-size: 2em;
+      margin-bottom: 30px;
     }
-    .contatti {
+
+    h3 {
+      font-size: 1.3em;
+      margin-top: 50px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    .hero {
+      background-color: #ffffff;
+      text-align: center;
+      padding: 100px 20px;
+    }
+
+    .hero p {
+      max-width: 700px;
+      margin: 20px auto;
+      font-size: 1.1em;
+    }
+
+    .btn {
+      display: inline-block;
       margin-top: 30px;
-      font-size: 16px;
+      padding: 14px 30px;
+      background-color: #000;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 30px;
+      font-size: 0.95em;
+      letter-spacing: 1px;
+    }
+
+    .services h3 {
+      text-align: left;
+    }
+
+    .contact {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+    }
+
+    .contact a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .contact p {
+      margin: 10px 0;
     }
   </style>
 </head>
+
 <body>
 
-  <h1>A.T LASHES</h1>
-  <p>Lashmaker professionista</p>
-  <p>Dove nasce lo sguardo che fa la differenza</p>
+  <!-- HERO -->
+  <section class="hero">
+    <h1>A.T LASHES</h1>
+    <p><strong>Dove nasce lo sguardo che fa la differenza</strong></p>
 
-  <div class="contatti">
+    <p>
+      A.T Lashes è uno spazio dedicato alla valorizzazione dello sguardo e al benessere della persona.
+      Ogni trattamento nasce da un’attenta consulenza ed è studiato per offrire risultati armoniosi,
+      eleganti e personalizzati, nel pieno rispetto della naturale bellezza di ogni cliente.
+    </p>
+
+    <a class="btn" href="https://wa.me/" target="_blank">Prenota su WhatsApp</a>
+  </section>
+
+  <!-- RELAX -->
+  <section>
+    <h2>Un’esperienza di bellezza e relax</h2>
+
+    <p>
+      Da A.T Lashes, ogni trattamento è concepito come un vero e proprio rituale di benessere.
+      L’obiettivo non è soltanto migliorare l’aspetto estetico, ma offrire un’esperienza completa
+      che unisca bellezza, relax e cura della persona.
+    </p>
+
+    <p>
+      Prima dell’inizio di ogni servizio, la cliente viene accolta in un ambiente tranquillo e armonioso,
+      pensato per favorire il rilassamento. Per accompagnare questo momento di pausa, viene applicata
+      una <strong>maschera viso rilassante</strong>, studiata per donare una sensazione immediata di comfort
+      e benessere.
+    </p>
+
+    <p>
+      Ogni fase del trattamento viene eseguita con attenzione e professionalità, rispettando i tempi
+      necessari affinché la cliente possa rilassarsi completamente e vivere l’esperienza in modo
+      piacevole e disteso.
+    </p>
+
+    <p>
+      Da A.T Lashes, la bellezza nasce dal benessere e si riflette nello sguardo.
+    </p>
+  </section>
+
+  <!-- SERVIZI -->
+  <section class="services">
+    <h2>I trattamenti</h2>
+
+    <h3>Extension ciglia – Tecnica One to One</h3>
+    <p>
+      La tecnica one to one prevede l’applicazione di una singola extension su ogni ciglia naturale.
+      Il risultato è uno sguardo naturale, ordinato ed elegante, ideale per chi desidera valorizzare
+      gli occhi in modo discreto e raffinato.
+    </p>
+
+    <h3>Extension ciglia – Volume Brasiliano</h3>
+    <p>
+      Il volume brasiliano è una tecnica pensata per donare maggiore intensità e profondità allo sguardo,
+      mantenendo leggerezza ed equilibrio. Il risultato è uno sguardo più definito e pieno, senza
+      risultare eccessivo.
+    </p>
+
+    <h3>Differenze tra One to One e Volume Brasiliano</h3>
+    <p>
+      <strong>One to One</strong>: effetto naturale, delicato e ordinato<br>
+      <strong>Volume Brasiliano</strong>: effetto più intenso, pieno e definito
+    </p>
+
+    <h3>Laminazione ciglia classica</h3>
+    <p>
+      Trattamento che nutre, incurva e valorizza le ciglia naturali, rendendole visibilmente più
+      ordinate e definite. Ideale per chi ama un risultato naturale e curato.
+    </p>
+
+    <h3>Laminazione ciglia coreana – Trattamento Luxury</h3>
+    <p>
+      La laminazione ciglia coreana è un trattamento luxury di ultima generazione, pensato per chi
+      desidera il massimo in termini di cura, definizione e risultato estetico.
+    </p>
+    <p>
+      Grazie a protocolli avanzati e prodotti altamente performanti, garantisce una curvatura precisa,
+      un nutrimento profondo e uno sguardo elegante, lucido e impeccabile.
+    </p>
+
+    <h3>Laminazione sopracciglia</h3>
+    <p>
+      Trattamento pensato per disciplinare e modellare le sopracciglia, valorizzando i lineamenti del
+      viso in modo naturale ed equilibrato.
+    </p>
+
+    <h3>Tinta sopracciglia</h3>
+    <p>
+      Intensifica il colore naturale delle sopracciglia, rendendo lo sguardo più definito e armonioso,
+      riducendo la necessità di trucco quotidiano.
+    </p>
+
+    <h3>Ritocco</h3>
+    <p>
+      Servizio studiato per mantenere il trattamento sempre impeccabile nel tempo, preservando
+      l’armonia dello sguardo.
+    </p>
+
+    <h3>Rimozione</h3>
+    <p>
+      Rimozione eseguita in modo sicuro e delicato, nel pieno rispetto delle ciglia naturali.
+    </p>
+  </section>
+
+  <!-- CONTATTI -->
+  <section class="contact">
+    <h2>Prenotazioni e contatti</h2>
     <p>📍 Italia</p>
-    <p>📩 Instagram: @at.lashes</p>
-  </div>
+    <p>
+      <a href="https://instagram.com/at.lashes" target="_blank">Instagram</a><br>
+      <a href="https://wa.me/" target="_blank">WhatsApp</a>
+    </p>
+
+    <p style="margin-top:40px;">
+      Concedersi un momento di relax significa prendersi cura di sé.<br>
+      <strong>Da A.T Lashes, ogni sguardo racconta una storia di bellezza e benessere.</strong>
+    </p>
+  </section>
 
 </body>
 </html>
